Primer blueprint, nueva conexion a bd y query
todo lo que dice el titulo y se crearon la mayoria de los archivos para repartir todo el proyecto

--- a/Proyecto/templates/administrar_medicos.html
+++ b/Proyecto/templates/administrar_medicos.html
@@ -463,7 +463,7 @@
         </table>
 
         <div class="actions">
-            <a class="btn btn-add" href="{{ url_for('agregar_medico') }}">
+            <a class="btn btn-add" href="{{ url_for('AgregarM.agregar_medico') }}">
                 <i class="fas fa-plus-circle"></i> Agregar Nuevo Médico
             </a>
         </div>
