--- a/Proyecto/templates/actualizar_medico.html
+++ b/Proyecto/templates/actualizar_medico.html
@@ -209,7 +209,7 @@
     <div class="container">
         <h1><i class="fas fa-user-md"></i> Registrar Nuevo Médico</h1>
         
-<form action="/editar_medico/{{ rfc }}" method="POST">
+<form action="{{ url_for('EditarM.editar_medico', rfc=rfc) }}" method="POST">
     <div class="form-section">
         <h2><i class="fas fa-id-card"></i> Información Personal</h2>
         
